--- a/vue-breeze-api/package.json
+++ b/vue-breeze-api/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/koho": "^4.5.11",
     "axios": "^1.3.4",
     "pinia": "^2.0.33",
     "vue": "^3.2.47",
@@ -19,6 +20,7 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.0",
-    "vite": "^4.2.0"
+    "vite": "^4.2.0",
+    "vite-plugin-pwa": "^0.14.7"
   }
 }
